# clean-architecture-template

./: .env.example  .gitignore  Cargo.toml
assets/: db.sql  schema.sql
migrations/: 20251130053341_initial_schema.sql
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/http/: http_serve.rs  mod.rs
src/adapters/http/middlewares/: mod.rs  (+3 more)
src/adapters/postgres/: mod.rs
src/application/: application_errors.rs
src/application/dtos/: auth_dto.rs  book_dto.rs  branch_dto.rs  category_dto.rs  mod.rs  permission_dto.rs  receipt_dto.rs  role_dto.rs  sale_dto.rs  user_dto.rs
src/application/services/: auth_service.rs  book_service.rs  branch_service.rs  category_service.rs  mod.rs  permission_service.rs  receipt_service.rs  role_service.rs  sale_service.rs  user_service.rs
src/application/use_cases/: auth_usecase.rs  book_usecase.rs  branch_usecase.rs  category_usecase.rs  inventory_adjust_usecase.rs  inventory_usecase.rs  mod.rs  order_usecase.rs  payment_usecase.rs  permission_usecase.rs  receipt_usecase.rs  role_usecase.rs  sale_usecase.rs  user_usecase.rs
src/config/: config_loader.rs  config_model.rs  mod.rs
src/domain/entities/: book.rs  book_image.rs  branch.rs  category.rs  inventory.rs  mod.rs  order.rs  payment.rs  permission.rs  receipt.rs  role.rs  sale.rs  user.rs
src/domain/repositories/: branch_repository.rs  category_repository.rs  inventory_repository.rs  mod.rs  order_repository.rs  permission_repository.rs  receipt_repository.rs  role_permission_repository.rs  role_repository.rs  sale_repository.rs  user_repository.rs
src/domain/value_objects/: age.rs  email_address.rs  isbn13.rs  mod.rs  money.rs  password.rs  person_name.rs  phone_number.rs  receipt_code.rs  role_description.rs  role_name.rs  stock_quantity.rs
src/infrastructure/: config_loader.rs  config_model.rs  jwt.rs  mod.rs
src/infrastructure/axum_http/: http_serve.rs
src/infrastructure/postgres/: mod.rs  postgres_connector.rs  schema.rs
src/infrastructure/security/: argon2.rs  jwt.rs
src/presentation/http/: default_router.rs  http_serve.rs  mod.rs
(+58 files in other folders)
