[package]
name = "clean_architecture_template"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
axum-extra = { version = "0.10.3", features = ["cookie"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["full"] }

tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"

sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "json",
    "migrate",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4.7.0"

argon2 = { version = "0.5.3", features = ["std"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
rand = "0.9.2"

chrono = { version = "0.4.42", features = ["serde"] }

dotenvy = "0.15.0"

anyhow = "1"
thiserror = "2.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ["env-filter", "json"] }
